[package]
name = "jwtks"
version = "0.1.0"
authors = ["Didier Plaindoux <d.plaindoux@free.fr>"]
edition = "2018"

[dependencies]
# If the vendored Cargo feature is enabled, the openssl-src crate will be
# used to compile OpenSSL from source and statically link to it. OpenSSL
# version 1.1.0 is currently used, but that will be upgraded to 1.1.1 at
# some point after it is released without a major version bump to this crate.
openssl = { version = "0.10", features = ["vendored"] }

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"